force-app/main/default/objects/cgcloud__Signature__c/cgcloud__Signature__c.object-meta.xml
<CustomObject>
    <description>Object to hold attributes for signature</description>
    <label>Signature</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Signature Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>