force-app/main/default/objects/cgcloud__Signature__c/fields/cgcloud__Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Name__c</fullName>
    <description>Name of the user whose signature is captured</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>