force-app/main/default/objects/cgcloud__Signature__c/fields/cgcloud__Order__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>cgcloud__Order__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>