force-app/main/default/objects/cgcloud__Signature__c/fields/cgcloud__Reference_Object_Phase__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Reference_Object_Phase__c</fullName>
    <label>Reference Object Phase</label>
    <length>30</length>
    <type>Text</type>
</CustomField>