force-app/main/default/objects/cgcloud__Signature__c/fields/cgcloud__Signature_Flow_Step__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Signature_Flow_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signature Flow Step</label>
    <referenceTo>cgcloud__Signature_Flow_Step__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>