force-app/main/default/objects/cgcloud__Signature__c/fields/cgcloud__Tour__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tour</label>
    <referenceTo>cgcloud__Tour__c</referenceTo>
    <relationshipLabel>Signatures</relationshipLabel>
    <relationshipName>Signatures</relationshipName>
    <type>Lookup</type>
</CustomField>